# Matrices

./: .gitignore  CMakeLists.txt  README.md  matrices  run_tests  valgrind_tests
include/: matrices.hpp  row.hpp  utils.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  generators.py  matrix_tests.cpp  row_tests.cpp  tests.py  unit_tests.cpp
